Added the game table and now it is possible to play

--- a/README
+++ b/README
@@ -1,7 +1,15 @@
+--Проект Расолько Юлии--
+
 Команды для тестирования:
 	mkdir build
 	cd build
 	cmake ..
 	make
 	./ForTest
-Для последнего теста необходимо ввести любое число (далее это будет номером клетки, в которую вставляется объект).
+
+Команды для запуска игры:
+	mkdir build
+	cd build
+	cmake ..
+	make
+	./Puzzle
